Add 15 comment and next text

--- a/template.html
+++ b/template.html
@@ -14,6 +14,7 @@
     Some texts have word definitions and explanations to help you. Some of these texts are written
     in an old style of English.
   </p>
+  <p>New text 2</p>
   <p>
     These are short2, famous texts in English from classic sources like the Bible or Shakespeare.
     Some texts have word definitions and explanations to help you. Some of these texts are written
