Add next text 3

--- a/template.html
+++ b/template.html
@@ -25,5 +25,6 @@
     Some texts have word definitions and explanations to help you. Some of these texts are written
     in an old style of English.
   </p>
+  <p>New text 3</p>
 </body>
 </html>
