Add Second paragraph

--- a/template.html
+++ b/template.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <p>First paragraph</p>
+  <p>Second paragraph</p>
   <p>Html template</p>
   <p>New text 1</p>
   <p>
@@ -26,5 +27,6 @@
     in an old style of English.
   </p>
   <p>New text 3</p>
+  <p>New text 4</p>
 </body>
 </html>
